# kairix-financeiro

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AUDITORIA_BACKEND.md  Dockerfile  README.md  docker-compose.backend.yml  docker-compose.frontend.yml  docker-compose.postgres.yml  docker-compose.redis.yml  docker-compose.worker.yml  docker-compose.yml  kairix_financeiro - plano de redesign completo.md  pyproject.toml  run.py
backend/: __init__.py  config.py  main.py  worker.py
backend/core/: __init__.py  database.py  security.py
backend/models/: __init__.py  models.py
backend/routes/: __init__.py  agendamentos.py  alertas.py  auth.py  categorias.py  dashboard.py  familia.py  preferencias.py  recorrencias.py  transacoes.py  whatsapp.py
backend/routes/whatsapp/: __init__.py  formatters.py  handlers.py  utils.py  webhook.py
backend/schemas/: __init__.py  schemas.py
backend/services/: __init__.py  agent.py  llm.py  memory_service.py  queue_service.py  scheduler_service.py  whatsapp.py
backend/services/agents/: __init__.py  base_agent.py  consultant_agent.py  extractor_agent.py  gateway_agent.py  learning_agent.py  personality_agent.py  proactive_agent.py  processor.py  recurrence_agent.py
backend/services/llm/: __init__.py  client.py  extraction.py  transcription.py  vision.py
backend/utils/: __init__.py  formatters.py
frontend/: .dockerignore  Dockerfile  next.config.ts  package-lock.json  package.json  vitest.config.ts
frontend/src/: middleware.ts  proxy.ts
frontend/src/__tests__/: setup.ts
frontend/src/__tests__/lib/: validators.test.ts
frontend/src/app/: globals.css  layout.tsx
frontend/src/app/(auth)/: layout.tsx
frontend/src/app/(auth)/cadastro/: page.tsx
frontend/src/app/(auth)/login/: page.tsx
frontend/src/app/(dashboard)/: layout.tsx  page.tsx
frontend/src/app/(dashboard)/configuracoes/: page.tsx
frontend/src/app/(dashboard)/metas/: page.tsx
frontend/src/app/(dashboard)/relatorios/: page.tsx
frontend/src/app/(dashboard)/transacoes/: page.tsx
frontend/src/components/dashboard/: category-chart.tsx  evolution-chart.tsx  period-selector.tsx  recent-transactions.tsx  stats-cards.tsx
frontend/src/components/layout/: navbar.tsx  sidebar.tsx
frontend/src/components/transactions/: transaction-dialog.tsx  transaction-filters.tsx  transaction-form.tsx  transaction-list.tsx
frontend/src/hooks/: index.ts  use-alerts.ts  use-auth.ts  use-categories.ts  use-dashboard.ts  use-family.ts  use-preferences.ts  use-recurrences.ts  use-transactions.ts
frontend/src/lib/api/: alerts.ts  auth.ts  categories.ts  client.ts  dashboard.ts  family.ts  index.ts  preferences.ts  recurrences.ts  transactions.ts
frontend/src/lib/utils/: currency.ts  date.ts  validators.ts
frontend/src/providers/: query-provider.tsx  toast-provider.tsx
frontend/src/stores/: auth-store.ts  ui-store.ts
frontend/src/types/: models.ts
frontend/static/css/: style.css
frontend/static/js/: auth.js
frontend/templates/: alterar-senha.html  cadastro.html  dashboard.html  despesas.html  familia.html  login.html  meus-dados.html  receitas.html  relatorios.html
tests/: conftest.py  test_auth.py  test_security.py
